--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
   Testando meu primeiro componente
 </p>
 <app-topo></app-topo>
+<!-- <div app-topo></div> -->
+<!-- <div class="app-topo"></div> -->
