--- a/src/app/topo/topo.component.html
+++ b/src/app/topo/topo.component.html
@@ -1,3 +1,3 @@
-<p class="exemplo">
-    Esse é o componente topo
-</p>
+<nav class="navbar navbar-dark bg-primary">
+    <span class="navbar-brand mb-0 h1">Aprendendo Inglês</span>
+</nav>
