--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -13,12 +13,12 @@
         <div class="row">
             <div class="col">
                 <h6>{{ instrucao }}</h6>
-                <p>{{ frases[0].fraseEng }}</p>
+                <p>{{ rodadaFrase.fraseEng }}</p>
                 <div class="form-group">                  
                     <textarea 
                         class="form-control" 
                         rows="3"
-                        (input)="atualizaResposta($event)"
+                         (input)="atualizaResposta($event)" 
                     ></textarea>
                 </div>
             </div>
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-primary">Verificar</button>
+                    <button type="button" class="btn btn-primary" (click)="verificarResposta()">Verificar</button>
                 </div>              
             </div>
         </div>
