--- a/src/app/tentativas/tentativas.component.html
+++ b/src/app/tentativas/tentativas.component.html
@@ -1,3 +1,5 @@
-<img [src]="coracaoVazio" /> <!-- Property Binding -->
-<img [src]="coracaoCheio" />
-<img [src]="coracaoCheio" />
+<!--<img [src]="coracaoVazio" />--> <!-- Property Binding -->
+<!-- <img [src]="coracaoCheio" />
+<img [src]="coracaoCheio" /> -->
+
+<img *ngFor="let coracao of coracoes" [src]="coracao.exibeCoracao()"/>
