--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,18 @@
         <div class="row">
             <h3 style="color: red;">Fim de jogo, infelizmente você perdeu :S</h3>
         </div>
+        <div class="row">
+            <button class="btn btn-primary" (click)="reiniciarJogo()">Jogar Novamente</button>
+        </div>
     </div>
 </ng-template>
 <ng-template #fimDeJogoVitoria>
     <div class="container" style="margin-top: 50px">
         <div class="row">
             <h3 style="color: green;">Fim de jogo, você ganhou :D</h3>
+        </div>
+        <div class="row">
+            <button class="btn btn-primary" (click)="reiniciarJogo()">Jogar Novamente</button>
         </div>
     </div>
 </ng-template>
